--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "trrr",
   "version": "1.0.0",
-  "description": "",
+  "description": " ",
   "main": "index.js",
   "scripts": {
-    "build" : "npm install",
+    "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +12,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RuStyC0der/js_lab.git"
+  },
+  "bugs": {
+    "url": "https://github.com/RuStyC0der/js_lab/issues"
+  },
+  "homepage": "https://github.com/RuStyC0der/js_lab#readme"
 }
